--- a/css/media.css
+++ b/css/media.css
@@ -388,7 +388,7 @@ Devices Impact: Small Monitors, Small Laptops, Tablets in Landscape Mode, Tablet
 
   .nav-menu .btn-sign-up a {
     margin-top: 24px;
-    background-color: #0e7dff;
+    background-color: #006c47;
     color: #fff;
     border: none;
   }
