--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
 
 [Color codes]
 
-# Primary Color (Buttons, Links): #0E7DFF
+# Primary Color (Buttons, Links): #006c47
 # Dark Blue Color (Headings) #1F1F39
 # Mid Grey (Subheadings, Captions, Paragraphs) rgba(31, 31, 57, 0.5)
 
@@ -62,11 +62,11 @@ ul {
 }
 
 .btn.btn-primary {
-  background-color: #0e7dff;
+  background-color: #006c47;
 }
 
 .btn.btn-primary:hover {
-  background-color: #005fcf;
+  background-color: #fff0e9;
 }
 
 .btn:focus,
@@ -211,7 +211,7 @@ header .nav .logo img {
   content: "";
   height: 2px;
   border-radius: 2px;
-  background-color: #0e7dff;
+  background-color: #006c47;
   width: 0%;
   position: absolute;
   bottom: 0;
@@ -324,7 +324,7 @@ header.homepage-3 .nav-menu .login {
 }
 
 header.homepage-3 .nav-menu .btn-sign-up a {
-  background-color: #0e7dff;
+  background-color: #006c47;
   color: #fff;
   border: none;
 }
@@ -502,7 +502,7 @@ Banner Section / .banner-section :: Ends
 .page-head .input-container button {
   padding: 18px 36px;
   border: none;
-  background-color: #0e7dff;
+  background-color: #006c47;
   border-radius: 20px;
   color: #fff;
   font-weight: 700;
@@ -909,7 +909,7 @@ Why EliteSense Section / .why-EliteSense :: Ends
 }
 
 .testimonial .owl-carousel button.owl-dot.active {
-  background-color: #0e7dff;
+  background-color: #006c47;
 }
 
 .testimonial .testimonial-reviews .review {
@@ -1087,7 +1087,7 @@ Testimonial Section / .testimonial :: Ends
 
 .EliteSense-plans .plan-card:hover,
 .EliteSense-plans .plan-card.active {
-  background-color: #0e7dff;
+  background-color: #006c47;
   color: #fff;
 }
 
@@ -1166,7 +1166,7 @@ Testimonial Section / .testimonial :: Ends
 .fa-check-circle:before,
 .fa-circle-check:before {
   content: "\f058";
-  color: #0e7dff;
+  color: #006c47;
   font-size: 10px;
   padding-right: 13px;
 }
@@ -1226,7 +1226,7 @@ Testimonial Section / .testimonial :: Ends
   width: 26px;
   left: 4px;
   bottom: 4px;
-  background-color: #0e7dff;
+  background-color: #006c47;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
@@ -1316,7 +1316,7 @@ EliteSense Plans Section / .EliteSense-plans :: Ends
 }
 
 .EliteSense-stories .stories-card .story-card .story-content a {
-  color: #0e7dff;
+  color: #006c47;
   font-size: 0.7em;
   font-weight: 700;
   text-decoration: none;
@@ -1582,7 +1582,7 @@ Subscribe Section / .subscribe :: Ends
 }
 
 .footer .footer-socials .social-icon a i:hover {
-  color: #0e7dff;
+  color: #006c47;
 }
 
 .footer .footer-socials .app-download {
@@ -1987,7 +1987,7 @@ Homepage 3 :: Ends
 }
 
 .about-focus .focus-cards .focus-card i {
-  color: #0e7dff;
+  color: #006c47;
   font-size: 20px;
   padding-bottom: 20px;
 }
@@ -2119,7 +2119,7 @@ Homepage 3 :: Ends
 }
 
 .our-team .team-row .team-card .social i:hover {
-  color: #0e7dff;
+  color: #006c47;
 }
 
 .ask-question {
@@ -2129,7 +2129,7 @@ Homepage 3 :: Ends
 .ask-question button {
   width: 345px;
   padding: 27px 44px;
-  background-color: #0e7dff;
+  background-color: #006c47;
   font-size: 30px;
   font-weight: 700;
   color: #fff;
@@ -2142,7 +2142,7 @@ Homepage 3 :: Ends
 .ask-question button:focus,
 .ask-question button:hover {
   box-shadow: none;
-  background-color: #0e7dff;
+  background-color: #006c47;
 }
 
 .about .try-EliteSense {
@@ -2181,7 +2181,7 @@ About Page :: Ends
 }
 
 .form-box .contant-info i {
-  color: #0e7dff;
+  color: #006c47;
 }
 
 .form-box .contant-info p {
@@ -2224,22 +2224,22 @@ About Page :: Ends
 
 .form-box .input-container input:focus,
 .form-box .input-container input:active {
-  outline: 2px solid #0e7dff;
-  color: #0e7dff;
+  outline: 2px solid #006c47;
+  color: #006c47;
   box-shadow: none;
 }
 
 .form-box .input-container select:focus,
 .form-box .input-container select:active {
-  outline: 2px solid #0e7dff;
-  color: #0e7dff;
+  outline: 2px solid #006c47;
+  color: #006c47;
   box-shadow: none;
 }
 
 .form-box .input-container textarea:focus,
 .form-box .input-container textarea:active {
-  outline: 2px solid #0e7dff;
-  color: #0e7dff;
+  outline: 2px solid #006c47;
+  color: #006c47;
   box-shadow: none;
 }
 
@@ -2257,7 +2257,7 @@ About Page :: Ends
 .form-box button {
   width: 345px;
   padding: 27px 44px;
-  background-color: #0e7dff;
+  background-color: #006c47;
   font-size: 30px;
   font-weight: 700;
   color: #fff;
@@ -2269,7 +2269,7 @@ About Page :: Ends
 .form-box button:focus,
 .form-box button:hover {
   box-shadow: none;
-  background-color: #0e7dff;
+  background-color: #006c47;
 }
 
 .office {
@@ -2357,7 +2357,7 @@ Contact Page :: Ends
 }
 
 .blog-features a {
-  color: #0e7dff;
+  color: #006c47;
   text-decoration: none;
   font-size: 14px;
   font-weight: 700;
@@ -2444,7 +2444,7 @@ Contact Page :: Ends
 }
 
 .EliteSense-blogs .blog-cards .blog-card .blog-content a {
-  color: #0e7dff;
+  color: #006c47;
   text-decoration: none;
   font-size: 14px;
   font-weight: 700;
@@ -2489,7 +2489,7 @@ Blog Page / .blogs :: Ends
 }
 
 .blog-details .page-head div a {
-  color: #0e7dff;
+  color: #006c47;
   text-decoration: none;
 }
 
@@ -2594,7 +2594,7 @@ Blog Page / .blogs :: Ends
 
 .blog-banner .blog-banner-bottom a {
   text-decoration: none;
-  color: #0e7dff;
+  color: #006c47;
 }
 
 .leave-comment {
@@ -2727,13 +2727,13 @@ Blog Details / .blog-details :: Ends
 
 .modal .input-container input:active,
 .modal .input-container input:focus {
-  outline: 2px solid #0e7dff;
-  color: #0e7dff;
+  outline: 2px solid #006c47;
+  color: #006c47;
   box-shadow: none;
 }
 
 .modal .input-container label a {
-  color: #0e7dff;
+  color: #006c47;
   font-size: 0.8em;
   text-decoration: none;
 }
@@ -2741,7 +2741,7 @@ Blog Details / .blog-details :: Ends
 .modal .form-container .btn {
   width: 100%;
   padding: 27px 44px;
-  background-color: #0e7dff;
+  background-color: #006c47;
   font-size: 30px;
   font-weight: 700;
   color: #fff;
@@ -2797,7 +2797,7 @@ Blog Details / .blog-details :: Ends
 }
 
 .another-way > div a:hover {
-  color: #0e7dff;
+  color: #006c47;
 }
 
 .modal .form-container > p {
@@ -2806,7 +2806,7 @@ Blog Details / .blog-details :: Ends
 }
 
 .modal .form-container > p a {
-  color: #0e7dff;
+  color: #006c47;
   text-decoration: none;
 }
 /*------------------------------------------------------------------
