--- a/css/style.css
+++ b/css/style.css
@@ -32,15 +32,14 @@
 # Mid Grey (Subheadings, Captions, Paragraphs) rgba(31, 31, 57, 0.5)
 
 */
-
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700;800;900");
+@import url("https://fonts.googleapis.com/css2?family=Exo");
 
 /*------------------------------------------------------------------
 1. Common :: Starts
 */
 body {
   font-size: 20px;
-  font-family: "Roboto", sans-serif;
+  font-family: "Exo";
   color: #1f1f39;
 }
 
@@ -66,7 +65,7 @@ ul {
 }
 
 .btn.btn-primary:hover {
-  background-color: #fff0e9;
+  background-color: #e5ffe5;
 }
 
 .btn:focus,
@@ -142,7 +141,7 @@ Common :: Ends
 2. Header / header :: Starts
 */
 header {
-  background-color: #fff0e9;
+  background-color: #e5ffe5;
   height: 100px;
   margin: auto;
   display: flex;
@@ -372,7 +371,7 @@ Header / header :: Ends
 3. Banner Section / .banner-section :: Starts
 */
 .banner-section {
-  background-color: #fff0e9;
+  background-color: #e5ffe5;
   position: relative;
 }
 
@@ -428,7 +427,7 @@ Header / header :: Ends
 }
 
 .hp-1 .banner-section {
-  background: linear-gradient(180deg, #fff0e9 80%, #fff 30%);
+  background: linear-gradient(180deg, #e5ffe5 80%, #fff 30%);
   padding-top: 100px;
 }
 
@@ -466,7 +465,7 @@ Banner Section / .banner-section :: Ends
   justify-content: center;
   align-items: center;
   min-height: 730px;
-  background-color: #fff0e9;
+  background-color: #e5ffe5;
   position: relative;
 }
 
@@ -578,7 +577,7 @@ Brand Section / .brand-partner :: Ends
 
 .how-it-works .working-content {
   margin-top: 190px;
-  background-color: #fff0e9;
+  background-color: #e5ffe5;
   border-radius: 25px;
   padding-top: 65px;
   position: relative;
@@ -786,7 +785,7 @@ Features Section / .features :: Ends
 }
 
 .why-EliteSense .why-EliteSense-content {
-  background-color: #fff0e9;
+  background-color: #e5ffe5;
   border-radius: 25px;
   padding: 90px 130px;
 }
@@ -844,7 +843,7 @@ Features Section / .features :: Ends
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 2px solid #fff0e9;
+  border: 2px solid #e5ffe5;
   border-radius: 20px;
   background-color: #fff;
   width: 270px;
@@ -1064,7 +1063,7 @@ Testimonial Section / .testimonial :: Ends
 }
 
 .EliteSense-plans .plan-card {
-  background-color: #fff0e9;
+  background-color: #e5ffe5;
   padding: 60px 30px;
   border-radius: 20px;
   width: 340px;
@@ -1150,7 +1149,7 @@ Testimonial Section / .testimonial :: Ends
 
 .EliteSense-plans .plan-card:hover button,
 .EliteSense-plans .plan-card.active button {
-  background-color: #fff0e9;
+  background-color: #e5ffe5;
 }
 
 .EliteSense-plans .plan-card ul {
@@ -1427,7 +1426,7 @@ FAQs Section / .faq :: Ends
 }
 
 .try-EliteSense .try-content {
-  background-color: #fff0e9;
+  background-color: #e5ffe5;
   padding: 90px 90px 100px 100px;
   border-radius: 25px;
 }
@@ -1497,7 +1496,7 @@ Try EliteSense Section / .try-EliteSense :: Ends
 
 .subscribe-input .input-container button {
   width: 215px;
-  background-color: #fff0e9;
+  background-color: #e5ffe5;
   border-radius: 20px;
   border: none;
   padding: 25px 75px;
@@ -1621,7 +1620,7 @@ Footer Section / .footer :: Ends
 */
 .homepage-2 .banner-section {
   padding-top: 200px;
-  background: linear-gradient(180deg, #fff0e9 90%, #fff 10%);
+  background: linear-gradient(180deg, #e5ffe5 90%, #fff 10%);
 }
 
 .homepage-2 .banner-section h1 {
@@ -1691,11 +1690,11 @@ Footer Section / .footer :: Ends
 }
 
 .homepage-2 .how-it-works .working-content .work-center {
-  background-color: #fff0e9;
+  background-color: #e5ffe5;
 }
 
 .homepage-2 .features {
-  background-color: #fff0e980;
+  background-color: #e5ffe580;
   padding-top: 150px;
   padding-bottom: 350px;
 }
@@ -1762,7 +1761,7 @@ Homepage 2 / .homepage-2 :: Ends
 
 .hp-3 .banner-section::before {
   content: "";
-  background-color: #fff0e9;
+  background-color: #e5ffe5;
   position: absolute;
   width: 1110px;
   height: 1110px;
@@ -1804,7 +1803,7 @@ Homepage 2 / .homepage-2 :: Ends
 }
 
 .hp-3 .how-it-works .working-content .work-card {
-  border: 2px solid #fff0e9;
+  border: 2px solid #e5ffe5;
   border-radius: 20px;
   padding: 50px 25px;
   display: flex;
@@ -1830,7 +1829,7 @@ Homepage 2 / .homepage-2 :: Ends
   content: "";
   width: 430px;
   height: 430px;
-  background-color: #fff0e9;
+  background-color: #e5ffe5;
   border-radius: 50%;
   position: absolute;
   top: 50%;
@@ -1850,7 +1849,7 @@ Homepage 2 / .homepage-2 :: Ends
 
 .hp-3 .mobile-ss::before {
   content: "";
-  background-color: #fff0e9;
+  background-color: #e5ffe5;
   position: absolute;
   width: 1110px;
   height: 1110px;
@@ -1959,7 +1958,7 @@ Homepage 3 :: Ends
 }
 
 .about-focus .focus {
-  background-color: #fff0e9;
+  background-color: #e5ffe5;
   border-radius: 20px;
   padding: 70px 100px;
   padding-bottom: 190px;
@@ -1980,7 +1979,7 @@ Homepage 3 :: Ends
   justify-content: center;
   align-items: center;
   background-color: #fff;
-  border: 2px solid #fff0e9;
+  border: 2px solid #e5ffe5;
   border-radius: 20px;
   flex-direction: column;
   padding: 40px 30px 18px;
@@ -2156,7 +2155,7 @@ About Page :: Ends
 19. Contact Page :: Starts
 */
 .form-box {
-  border: 1px solid #fff0e9;
+  border: 1px solid #e5ffe5;
   border-radius: 25px;
   padding: 54px 36px;
   margin-top: -90px;
@@ -2170,7 +2169,7 @@ About Page :: Ends
 
 .form-box .contant-info {
   padding: 30px 70px;
-  border: 1px solid #fff0e9;
+  border: 1px solid #e5ffe5;
   border-radius: 20px;
   width: 320px;
   height: 160px;
@@ -2456,7 +2455,7 @@ Contact Page :: Ends
 }
 
 .EliteSense-blogs .previous-post-btn button {
-  background-color: #fff0e9;
+  background-color: #e5ffe5;
   border: none;
   border-radius: 20px;
   font-size: 20px;
@@ -2560,7 +2559,7 @@ Blog Page / .blogs :: Ends
   font-weight: 400;
   line-height: 70px;
   padding: 73px 84px;
-  background-color: #fff0e9;
+  background-color: #e5ffe5;
   border-radius: 20px;
   text-align: center;
   margin-bottom: 25px;
@@ -2721,7 +2720,7 @@ Blog Details / .blog-details :: Ends
   border-radius: 20px;
   font-weight: bold;
   padding: 12px 20px;
-  background-color: #fff0e9;
+  background-color: #e5ffe5;
   border: none;
 }
 
